k8s/hello-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deploy
  namespace: bookstore-ns
spec:
  selector:
    matchLabels:
      app: hello-ms
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-ms
    spec:
      priorityClassName: high-priority
      containers:
        - name: hello-ms
          image: pmerson/hello-boot-kotlin
          ports:
            - containerPort: 8080
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - hello-ms
