k8s/hello-ms-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ms-svc-lb
  namespace: hello-ms-ns
spec:
  type: LoadBalancer
  selector:
    app: hello-ms
  ports:
    - port: 80
      targetPort: 8080
