k8s/hello-ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ms-svc
  namespace: hello-ms-ns
spec:
  selector:
    app: hello-ms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
