k8s/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: bookstore-ns
spec:
  selector:
    app: hello-ms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
#  type: ClusterIP
