k8s/hello-svc_NOT_USED.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: bookstore-ns
spec:
  type: NodePort
  selector:
    app: hello-ms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
