k8s/hello-ing_NOT_USED.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-web-app-bff
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Client-Type: Web";
spec:
  rules:
    - host: pmerson-ediss-bookstore.amazonaws.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: hello-svc
                port:
                  number: 80
